# BioExplorer

./: .gitignore  CMakeLists.txt
apps/BraynsViewer/: CMakeLists.txt
apps/ui/: BaseWindow.cpp  BaseWindow.h
bioexplorer/backend/plugins/Sonata/plugin/io/: SonataCacheLoader.cpp  SonataCacheLoader.h
bioexplorer/backend/plugins/Sonata/plugin/neuroscience/astrocyte/: AstrocyteLoader.cpp  AstrocyteLoader.h
bioexplorer/backend/plugins/Sonata/plugin/neuroscience/common/: MorphologyLoader.cpp  MorphologyLoader.h
bioexplorer/backend/plugins/Sonata/plugin/neuroscience/neuron/: AbstractCircuitLoader.cpp  AbstractCircuitLoader.h  AdvancedCircuitLoader.cpp  AdvancedCircuitLoader.h  MeshCircuitLoader.cpp  MeshCircuitLoader.h  MorphologyCollageLoader.cpp  MorphologyCollageLoader.h  PairSynapsesLoader.cpp  PairSynapsesLoader.h  SynapseCircuitLoader.cpp  SynapseCircuitLoader.h
bioexplorer/backend/science/: BioExplorerPlugin.cpp  BioExplorerPlugin.h
bioexplorer/backend/science/api/: Params.cpp
bioexplorer/backend/science/atlas/: Atlas.cpp  Atlas.h  AtlasLoader.cpp  AtlasLoader.h
bioexplorer/backend/science/common/: Assembly.cpp  Assembly.h  Displacement.h  Types.h  Utils.cpp  Utils.h
bioexplorer/backend/science/connectomics/synapses/: SynapseEfficacy.cpp  SynapseEfficacy.h
bioexplorer/backend/science/connectomics/synaptome/: Synaptome.cpp  Synaptome.h
bioexplorer/backend/science/connectomics/whitematter/: WhiteMatter.cpp  WhiteMatter.h  WhiteMatterLoader.cpp  WhiteMatterLoader.h
bioexplorer/backend/science/io/: CacheLoader.cpp  CacheLoader.h
bioexplorer/backend/science/io/db/: DBConnector.cpp
bioexplorer/backend/science/meshing/: SurfaceMesher.cpp
bioexplorer/backend/science/molecularsystems/: Molecule.cpp
bioexplorer/backend/science/morphologies/: Astrocytes.cpp  Astrocytes.h  AstrocytesLoader.cpp  AstrocytesLoader.h  Neurons.cpp  Neurons.h  NeuronsLoader.cpp  NeuronsLoader.h  Synapses.cpp  Synapses.h
bioexplorer/backend/science/vasculature/: Vasculature.cpp  Vasculature.h  VasculatureLoader.cpp  VasculatureLoader.h
bioexplorer/backend/tests/: MeshBasedMembrane.cpp  RNASequence.cpp
bioexplorer/pythonsdk/bioexplorer/: bio_explorer.py  displacement_parameters.py  enums.py
bioexplorer/pythonsdk/notebooks/astrocytes/: BioExplorer_astrocytes.ipynb
bioexplorer/pythonsdk/notebooks/neurons/: BioExplorer_neurons.ipynb
bioexplorer/pythonsdk/notebooks/utils/: BioExplorer_MovieMaker.ipynb
bioexplorer/pythonsdk/notebooks/vasculature/: BioExplorer_vasculature.ipynb
brayns/engineapi/: Engine.cpp  Engine.h
brayns/parameters/: RenderingParameters.h
engines/optix6/: CMakeLists.txt  OptiXCamera.cpp  OptiXCameraProgram.h  OptiXContext.cpp  OptiXContext.h  OptiXEngine.cpp  OptiXFrameBuffer.cpp  OptiXFrameBuffer.h  OptiXMaterial.cpp  OptiXScene.h
engines/optix6/cuda/camera/: OpenDeckCamera.cu  OrthographicCamera.cu  PerspectiveCamera.cu
engines/optix6/cuda/renderer/: Advanced.cu
extensions/medicalimaging/dicom/plugin/io/: DICOMLoader.cpp  DICOMLoader.h
platform/: CMakeLists.txt
platform/core/: EngineFactory.cpp
platform/core/common/: Types.h
platform/core/common/loader/: Loader.h
platform/core/io/: ArchiveLoader.cpp  ArchiveLoader.h  MeshLoader.cpp  MeshLoader.h  VolumeLoader.cpp  VolumeLoader.h  XYZBLoader.cpp  XYZBLoader.h
platform/engines/optix6/cuda/: Helpers.cuh
platform/engines/optix6/cuda/geometry/: SDFGeometries.cu
platform/engines/solr/: CMakeLists.txt  Logs.h  SolRCamera.cpp  SolRCamera.h  SolRContext.cpp  SolRContext.h  SolREngine.cpp  SolREngine.h  SolRFrameBuffer.cpp  SolRFrameBuffer.h  SolRMaterial.cpp  SolRMaterial.h  SolRModel.cpp  SolRModel.h  SolRRenderer.cpp  SolRRenderer.h  SolRScene.cpp  SolRScene.h  SolRTypes.h  SolRVolume.cpp  SolRVolume.h
platform/tests/: ClientServer.h
plugins/OpenDeck/: CMakeLists.txt  OpenDeckPlugin.cpp  OpenDeckPlugin.h
plugins/OpenDeck/module/cuda/camera/cylindricStereo/: CylindricStereoCamera.cu
plugins/OpenDeck/plugin/common/: OpenDeckParameters.h
plugins/OpenDeck/plugin/optix6/: OptiXCylindricStereoCamera.cpp
